MDEV-7130 MASTER_POS_WAIT(log_name,log_pos,timeout,"connection_name") hangs, does not respect the timeout

Changed also check for connection_name to prevent same bug if fifth argument is introduced in future